--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vite": "^5.0.8"
   },
   "dependencies": {
-    "pixi.js": "^7.4.0"
+    "pixi.js": "^7.4.0",
+    "tone": "^14.7.77"
   }
 }
