--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vite": "^5.0.8"
   },
   "dependencies": {
+    "draggable": "^4.2.0",
     "eases": "^1.0.8",
     "pixi.js": "^7.4.0",
     "tone": "^14.7.77"
